Graph editor, active keyframe panel, handle update coordinates. #39911

Closed
opened 2014-04-26 20:03:54 +02:00 by koil · 9 comments

System Information
Windows 7 32 bit.
AMD Radeon HD 7310M.

Blender Version
Broken: Blender 2.70a, win 32, f93bc76.

Short description of error
The keyframe handle coordinates update odd, when setting the handle coordinates in the graph editor, active keyframe panel.

Exact steps for others to reproduce the error

  • Here ive added some keyframes to cube X Location.
  • The handle type is Automatic I think, the default one.
  • First select one of the keyframes.
  • curvehandles.blend
  • Via the Active Keyframe panel, slide the Left handle coordinates, X and Y.
    When the X is updated, it updates the right Y, mostly.
    When the Y is updated, it updates the right Y, mostly.
  • Via the Active Keyframe panel, slide the Right handle coordinates, X and Y.
    When the X is updated, it scales the right handle.
    When the Y is updated, it seems to increment the right handle scale, if the value is set lower or higher.

The sliders also update the handles differently, if different parts of the keyframe are selected Shift+RMB, left or right handle only for example.

**System Information** Windows 7 32 bit. AMD Radeon HD 7310M. **Blender Version** Broken: Blender 2.70a, win 32, f93bc76. **Short description of error** The keyframe handle coordinates update odd, when setting the handle coordinates in the graph editor, active keyframe panel. **Exact steps for others to reproduce the error** * Here ive added some keyframes to cube X Location. * The handle type is Automatic I think, the default one. * First select one of the keyframes. * [curvehandles.blend](https://archive.blender.org/developer/F86055/curvehandles.blend) * Via the Active Keyframe panel, slide the Left handle coordinates, X and Y. When the X is updated, it updates the right Y, mostly. When the Y is updated, it updates the right Y, mostly. * Via the Active Keyframe panel, slide the Right handle coordinates, X and Y. When the X is updated, it scales the right handle. When the Y is updated, it seems to increment the right handle scale, if the value is set lower or higher. The sliders also update the handles differently, if different parts of the keyframe are selected Shift+RMB, left or right handle only for example.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @koilz

Added subscriber: @koilz
Joshua Leung self-assigned this 2014-04-27 14:27:08 +02:00
Member

Assigning to self.

Assigning to self.
Member

Indeed, it seems that it's only when editing the Y coordinate of the right handle (when both handles are of type "aligned") that problems occur.

This is potentially related to #38594 so I'll see whether Brecht's patch for that resolves this issue too.

Indeed, it seems that it's only when editing the Y coordinate of the right handle (when both handles are of type "aligned") that problems occur. This is potentially related to #38594 so I'll see whether Brecht's patch for that resolves this issue too.
Member

Changed status from 'Open' to: 'Duplicate'

Changed status from 'Open' to: 'Duplicate'
Member

✘ Merged into #38594.

✘ Merged into #38594.

This issue was referenced by blender/blender-addons-contrib@c504b8b237

This issue was referenced by blender/blender-addons-contrib@c504b8b237e1f9e866969ca6cd599b2884543686

This issue was referenced by c504b8b237

This issue was referenced by c504b8b237e1f9e866969ca6cd599b2884543686
Member

Although I merged this task into the other one, upon further investigation, it turned out that they weren't exactly due to the same problem (i.e. this one still remained after solving the other; in fact, the other made this worse). Regardless, I ended up whipping up a hack to fix this particular bug (c504b8b)

So, closed and fixed this time.

Although I merged this task into the other one, upon further investigation, it turned out that they weren't exactly due to the same problem (i.e. this one still remained after solving the other; in fact, the other made this worse). Regardless, I ended up whipping up a hack to fix this particular bug (c504b8b) So, closed and fixed this time.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39911
No description provided.